Refactor AltinnKlientWrapper